Bug 258247 - kio_man does not work correctly on Gentoo package 'man-pages-posix' (sections 0p, 1p and 3p)
Summary: kio_man does not work correctly on Gentoo package 'man-pages-posix' (sections...
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: man (other bugs)
Version First Reported In: 4.5
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 277547 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-29 05:54 UTC by Felix Tiede
Modified: 2014-03-13 22:32 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Tiede 2010-11-29 05:54:04 UTC
Version:           4.5 (using KDE 4.5.3) 
OS:                Linux

Using man:/ in dolphin or konqueror does not list sections 0p and 1p though they do exist. Additionally attribute "accesskey" is set to 'p' for section 3p.

Trying to use list of accesskeys then fails at section 3p.

Though sections 0p and 1p are not listed, they are accessible directly using 'man:/(0p)' and 'man:/(1p)' (seemingly 1 and 1p are merged).

Reproducible: Always

Steps to Reproduce:
1. Install man-pages-posix (Creating man sections 0p, 1p and 3p)
2. Call 'man:/' in konqueror

Actual Results:  
Sections 0p and 1p are not listed, accesskey for section 3p is set to 'p'.

Expected Results:  
List sections 0p and 1p, set accesskey for section 3p to appropriate '3p'.
Comment 1 Martin Koller 2011-01-05 23:37:22 UTC
As far as I understand the access key thingy, it shall be only 1 character, so that you easily can press that key to navigate.

About the missing sections: this has to wait a bit, as 4.6 is already in string freeze so I can not add new texts.
Comment 2 Rolf Eike Beer 2012-08-12 19:19:31 UTC
What's the current state of this?
Comment 3 Felix Tiede 2012-08-12 20:02:33 UTC
In KDE-4.9 dolphin simply lists many (didn't check which exactly) man-pages from "unknown" sections (0p, 1p, 1x), along with others, in top folder of man:/. Konqueror doesn't list sections 0p, 1p and 1x (though neither is empty) but does access section 3p cleanly.

Calling man-pages from those unlisted or unknown sections does not cause problems, in fact man-pages with ambiguous names are given the option to choose the section (even unlisted/unknown) from which the man-page is to be displayed.

So, at least for section 3p this is fixed, but not for sections 0p, 1p and 1x.
Comment 4 Rolf Eike Beer 2012-08-12 20:48:55 UTC
Still open, so changing status.
Comment 5 Martin Koller 2012-08-13 12:08:14 UTC
Git commit b21983d38098971a6a69bb5a88d1b70e5eed4c18 by Martin Koller.
Committed on 13/08/2012 at 13:37.
Pushed by mkoller into branch 'KDE/4.9'.

List also sections 0, 0p, 1p in main index
FIXED-IN: 4.9.1

M  +15   -3    kioslave/man/kio_man.cpp

http://commits.kde.org/kde-runtime/b21983d38098971a6a69bb5a88d1b70e5eed4c18
Comment 6 Martin Koller 2012-08-13 12:08:14 UTC
Git commit 8f63acc8083e28e19378d1692057c4db58393458 by Martin Koller.
Committed on 13/08/2012 at 14:04.
Pushed by mkoller into branch 'master'.

add translated section names for new sections 0, 0p, 1p
FIXED-IN: 4.10

M  +16   -26   kioslave/man/kio_man.cpp

http://commits.kde.org/kde-runtime/8f63acc8083e28e19378d1692057c4db58393458
Comment 7 Martin Koller 2012-08-13 12:08:15 UTC
Git commit 76b68b449d0d8cb64d04ea35b8317af01704eedb by Martin Koller.
Committed on 13/08/2012 at 13:37.
Pushed by mkoller into branch 'master'.

List also sections 0, 0p, 1p in main index
FIXED-IN: 4.9.1

M  +15   -3    kioslave/man/kio_man.cpp

http://commits.kde.org/kde-runtime/76b68b449d0d8cb64d04ea35b8317af01704eedb
Comment 8 Martin Koller 2012-08-13 12:14:51 UTC
I also fixed the access keys in the main index where I assign other letters if the last letter of the section is already used (e.g. 0p uses P, 1p therefore needs a new letter which simply is A).

As I can not introduce new translation strings in 4.9.x, I only added the new sections for 4.9.1 but without a description. The description will be available from 4.10 on.
Comment 9 Rolf Eike Beer 2012-08-13 16:50:24 UTC
You can request a string freeze exception on kde-i18n-doc@kde.org.
Comment 10 Martin Koller 2012-08-13 17:03:10 UTC
Thanks for the hint.
Although I think such exception are only for important bug fixes. I don't think this one is so important.
Comment 11 Luigi Toscano 2014-03-13 22:32:04 UTC
*** Bug 277547 has been marked as a duplicate of this bug. ***