List also sections 0, 0p, 1p in main index

BUG: 258247
FIXED-IN: 4.9.1